# cqprototype

./: CMakeLists.txt
engine/ext/: json.hpp  ldtk.hpp  miniaudio.h
engine/ext/glad/: glad.c  glad.h
engine/source/: engine.h
engine/source/audio/: audio.cpp  audio.h  types.h
engine/source/audio/miniaudio/: miniaudio_audio.cpp  miniaudio_audio.h  types.h
engine/source/core/: events.h  input.h  logger.h  timer.h  types.h
engine/source/physics/: physics.cpp  physics.h  types.h
engine/source/platform/: platform.cpp  platform.h  types.h
engine/source/platform/sdl2/: sdl2_platform.cpp  sdl2_platform.h
engine/source/renderer/: renderer.cpp  renderer.h  types.h
engine/source/renderer/gl/: gl_renderer.cpp  gl_renderer.h
engine/source/renderer/sdl2/: sdl2_renderer.cpp  sdl2_renderer.h
engine/source/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h
engine/source/scene/: scene.cpp  scene.h  types.h
engine/source/scripting/: scripting.cpp  scripting.h  types.h
engine/source/scripting/ruby/: ruby_scripting.cpp  ruby_scripting.h
game/source/: components.h  constants.h  game.cpp  game.h  main.cpp  systems.cpp  systems.h
